set main picture height to 600px

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,5 +1,13 @@
 @import "bootstrap";
 
 body {
-    padding-top: 40px;
+  padding-top: 40px;
+}
+
+.main-picture {
+  height: 600px; // TODO(ak): find a way to make it responsive
+
+  img {
+    max-height: 100%;
+  }
 }
