update usage of Picture

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -7,9 +7,6 @@ body {
 }
 
 .main-picture {
-  height: 600px; // TODO(ak): find a way to make it responsive
-
-  img {
-    max-height: 100%;
-  }
+  height: 600px;
+  object-fit: scale-down;
 }
