--- a/src/less/app.less
+++ b/src/less/app.less
@@ -10,3 +10,10 @@ body {
   height: 600px;
   object-fit: scale-down;
 }
+
+.thumbnails {
+  img {
+    height: 200px;
+    object-fit: scale-down;
+  }
+}
